--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -328,16 +328,17 @@
                 <span class="text-danger"> *</span>
             </div>
             <div class="col-8">
+                <label class="form-label">Home Delivery Type</label><br />
                 @if (CreateGroupBuyDto.AllowShipToOuterTaiwan && !CreateGroupBuyDto.AllowShipOversea)
                 {
                     @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
                     {
-                        if (item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) ||
-                            item == Enum.GetName(DeliveryMethod.SevenToEleven1) ||
-                            item == Enum.GetName(DeliveryMethod.SevenToElevenFrozen) ||
-                            item == Enum.GetName(DeliveryMethod.BlackCat1) ||
+                        if (item == Enum.GetName(DeliveryMethod.BlackCat1) ||
                             item == Enum.GetName(DeliveryMethod.BlackCatFreeze) ||
-                            item == Enum.GetName(DeliveryMethod.BlackCatFrozen))
+                            item == Enum.GetName(DeliveryMethod.BlackCatFrozen) ||
+                            item == Enum.GetName(DeliveryMethod.TCatDeliveryNormal) ||
+                            item == Enum.GetName(DeliveryMethod.TCatDeliveryFreeze) ||
+                            item == Enum.GetName(DeliveryMethod.TCatDeliveryFrozen))
                         {
                             <label for="@item" class="form-label">
                                 <input type="checkbox"
@@ -353,7 +354,63 @@
                 }
                 else
                 {
-                    @foreach (var item in Enum.GetNames(typeof(DeliveryMethod)))
+                    @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                    {
+                        if (item == Enum.GetName(DeliveryMethod.PostOffice) ||
+                        item == Enum.GetName(DeliveryMethod.HomeDelivery) ||
+                        item == Enum.GetName(DeliveryMethod.DeliveredByStore))
+                        {
+                            <label for="@item" class="form-label ">
+                                <input type="checkbox" class="form-check-input me-1" id="@item" disabled="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))&&item!="DeliveredByStore")" checked="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                                @L[item]
+                            </label>
+                        }
+                    }
+                }
+                <br />
+                <label class="form-label">Convenience Store Type</label><br />
+                @if (CreateGroupBuyDto.AllowShipToOuterTaiwan && !CreateGroupBuyDto.AllowShipOversea)
+                {
+                    @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                    {
+                        if (item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) ||
+                            item == Enum.GetName(DeliveryMethod.SevenToEleven1) ||
+                            item == Enum.GetName(DeliveryMethod.SevenToElevenFrozen))
+                        {
+                            <label for="@item" class="form-label">
+                                <input type="checkbox"
+                                       class="form-check-input me-1"
+                                       id="@item"
+                                       disabled="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) && item != "DeliveredByStore")"
+                                       checked="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
+                                       @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                                @L[item]
+                            </label>
+                        }
+                    }
+                }
+                else
+                {
+                    @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                    {
+                        if (item == Enum.GetName(DeliveryMethod.FamilyMart1) ||
+                        item == Enum.GetName(DeliveryMethod.FamilyMartC2C) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenNormal) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFreeze) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFrozen))
+                        {
+                            <label for="@item" class="form-label ">
+                                <input type="checkbox" class="form-check-input me-1" id="@item" disabled="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))&&item!="DeliveredByStore")" checked="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                                @L[item]
+                            </label>
+                        }
+                    }
+                }
+                <br />
+                <label class="form-label">Self-Pickup Type</label><br />
+                @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                {
+                    if (item == Enum.GetName(DeliveryMethod.SelfPickup))
                     {
                         <label for="@item" class="form-label ">
                             <input type="checkbox" class="form-check-input me-1" id="@item" disabled="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))&&item!="DeliveredByStore")" checked="@((CreateGroupBuyDto.ExcludeShippingMethod != null) && (CreateGroupBuyDto.ExcludeShippingMethod.Contains(item)))" @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
@@ -361,9 +418,7 @@
                         </label>
                     }
                 }
-
             </div>
-
         </div>
 
         <div class="row">
