--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -352,41 +352,7 @@
                                         <TableRowCell Colspan="9">
                                             <Div Class="col-12">
                                                 <Div Class="col-12">
-                                                    <Blazored.TextEditor.BlazoredTextEditor @ref="@ItemDetailsQuillHtml[ItemDetailsList.IndexOf(item)]">
-                                                        <ToolbarContent>
-                                                            <select class="ql-header">
-                                                                <option selected=""></option>
-                                                                <option value="1"></option>
-                                                                <option value="2"></option>
-                                                                <option value="3"></option>
-                                                                <option value="4"></option>
-                                                                <option value="5"></option>
-                                                            </select>
-                                                            <span class="ql-formats">
-                                                                <button class="ql-bold"></button>
-                                                                <button class="ql-italic"></button>
-                                                                <button class="ql-underline"></button>
-                                                                <button class="ql-strike"></button>
-                                                            </span>
-                                                            <span class="ql-formats">
-                                                                <select class="ql-color"></select>
-                                                                <select class="ql-background"></select>
-                                                            </span>
-                                                            <span class="ql-formats">
-                                                                <button class="ql-list" value="ordered"></button>
-                                                                <button class="ql-list" value="bullet"></button>
-                                                            </span>
-                                                            <span class="ql-formats">
-                                                                <button class="ql-link"></button>
-                                                            </span>
-                                                            <span class="ql-formats">
-                                                                <button class="ql-image"></button>
-                                                            </span>
-                                                            <span class="ql-formats">
-                                                                <button class="ql-video"></button>
-                                                            </span>
-                                                        </ToolbarContent>
-                                                    </Blazored.TextEditor.BlazoredTextEditor>
+                                                    <MemoEdit @bind-Text="@item.ItemDescription" />
                                                 </Div>
                                                 <br />
                                                 <Div Class="col-12">
