#PK-379 Used HTML editor in Tenant settings

--- a/src/Kooco.Pikachu.Blazor/Pages/LoginConfigurations/LoginConfigurations.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/LoginConfigurations/LoginConfigurations.razor
@@ -9,6 +9,7 @@
 @inject NavigationManager NavigationManager
 @inject IUiNotificationService UiNotificationService
 @inject AbpBlazorMessageLocalizerHelper<PikachuResource> LH
+@inject IUiNotificationService UiNotificationService
 
 <h5 class="text-dark">@L["LoginConfigurations"]</h5>
 <Div Class="rounded-cards website-settings">
